--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "redux-undo": "^0.5.0"
   }
 }
