--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "immutable": "^3.7.5",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-undo": "^0.5.0"
