--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
-    "build": "webpack --progress --colors"
+    "development": "webpack-dev-server",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js",
+    "server": "node server"
   },
   "keywords": [],
   "author": "Javier Valencia Romero",
@@ -22,7 +24,12 @@
     "mocha": "^2.3.4",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "babel-plugin-react-transform": "^1.1.0",
+    "babel-runtime": "^5.8.20",
+    "react-transform-hmr": "^1.0.0",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
   },
   "babel": {
     "presets": [
@@ -31,13 +38,28 @@
     ]
   },
   "dependencies": {
+    "babel": "^5.8.21",
+    "babel-register": "^6.3.13",
+    "body-parser": "^1.14.2",
+    "cookie-parser": "^1.4.0",
+    "cors": "^2.7.1",
+    "express": "^4.13.1",
+    "express-session": "^1.11.3",
+    "gm": "^1.21.1",
     "immutable": "^3.7.5",
+    "jade": ">= 0.0.1",
+    "js-cookie": "^2.0.4",
+    "node-localstorage": "^0.6.0",
+    "oauth": "^0.9.14",
+    "qs": "^4.0.0",
     "react": "^0.14.3",
     "react-color": "^1.3.0",
     "react-dom": "^0.14.3",
     "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
-    "redux-undo": "^0.5.0"
+    "redux-undo": "^0.5.0",
+    "temp": "^0.8.3",
+    "twitter": "^1.2.5"
   }
 }
