--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "node server",
     "preinstall": "NODE_ENV=production webpack -p --config webpack.production.config.js",
     "start": "node server",
-    "postinstall": "echo installation finish",
+    "postinstall": "echo installation finish"
   },
   "keywords": [],
   "author": "Javier Valencia Romero",
