--- a/package.json
+++ b/package.json
@@ -24,9 +24,18 @@
   },
   "dependencies": {
     "babel": "^5.8.21",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^1.1.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "babel-register": "^6.3.13",
+    "babel-runtime": "^5.8.20",
     "body-parser": "^1.14.2",
+    "chai": "^3.4.1",
+    "chai-immutable": "^1.5.3",
     "cookie-parser": "^1.4.0",
+    "copy-webpack-plugin": "^0.3.3",
     "cors": "^2.7.1",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
@@ -34,33 +43,25 @@
     "immutable": "^3.7.5",
     "jade": ">= 0.0.1",
     "js-cookie": "^2.0.4",
+    "jsdom": "^7.1.0",
+    "mocha": "^2.3.4",
     "node-localstorage": "^0.6.0",
     "oauth": "^0.9.14",
     "qs": "^4.0.0",
     "react": "^0.14.3",
     "react-color": "^1.3.0",
     "react-dom": "^0.14.3",
+    "react-hot-loader": "^1.3.0",
     "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
+    "react-transform-hmr": "^1.0.0",
     "redux": "^3.0.4",
     "redux-undo": "^0.5.0",
     "temp": "^0.8.3",
     "twitter": "^1.2.5",
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^3.4.1",
-    "chai-immutable": "^1.5.3",
-    "jsdom": "^7.1.0",
-    "mocha": "^2.3.4",
-    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
-    "babel-plugin-react-transform": "^1.1.0",
-    "babel-runtime": "^5.8.20",
-    "react-transform-hmr": "^1.0.0",
     "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.14.0",
     "webpack-hot-middleware": "^2.2.0"
   },
   "engines": {
