--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-color": "^1.3.0",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
+    "react-loader": "^2.0.0",
     "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.0",
