--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "oauth": "^0.9.14",
     "qs": "^4.0.0",
     "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.6",
+    "react-alert": "^1.0.14",
     "react-color": "^1.3.0",
+    "react-cookie-banner": "0.0.11",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-loader": "^2.0.0",
