--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gm": "^1.21.1",
     "immutable": "^3.7.5",
     "jade": ">= 0.0.1",
+    "jquery": "^2.2.0",
     "js-cookie": "^2.0.4",
     "jsdom": "^7.1.0",
     "mocha": "^2.3.4",
