--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "express-session": "^1.11.3",
     "gm": "^1.21.1",
     "immutable": "^3.7.5",
-    "jade": ">= 0.0.1",
     "jquery": "^2.2.0",
     "js-cookie": "^2.0.4",
     "jsdom": "^7.1.0",
     "mocha": "^2.3.4",
     "node-localstorage": "^0.6.0",
     "oauth": "^0.9.14",
+    "pug": "^2.0.0-alpha6",
     "qs": "^4.0.0",
     "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.6",
