--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lint": "eslint --ext .js --ext .jsx .",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
-    "watch": "webpack --progress --colors --watch",
-    "development": "webpack-dev-server",
+    "development": "webpack-dev-server --inline",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js",
     "server": "node server",
     "start": "npm run server",
@@ -61,6 +60,7 @@
     "pug": "^2.0.0-alpha6",
     "react": "^15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
+    "react-addons-pure-render-mixin": "^15.0.2",
     "react-addons-shallow-compare": "^15.0.2",
     "react-alert": "^1.0.14",
     "react-color": "^2.0.0",
