--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "node-localstorage": "^1.3.0",
     "oauth": "^0.9.14",
     "pug": "^2.0.0-alpha6",
+    "radium": "^0.17.1",
     "react": "^15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
     "react-addons-pure-render-mixin": "^15.0.2",
