--- a/.eslintrc
+++ b/.eslintrc
@@ -17,8 +17,8 @@
         "func-names": 0,
         "arrow-body-style": [2, "always"],
         "no-underscore-dangle": ["error", { "allow": ["__INITIAL_STATE__"] }],
-        "new-cap": ["error", {"capIsNewExceptions": ["Map"]}],
-        "react/prefer-es6-class": 1,
+        "new-cap": ["error", {"capIsNewExceptions": ["Map", "List"]}],
+        "react/prefer-es6-class": 1
     },
     "globals": {
         "$": true
