--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
         "arrow-body-style": [2, "always"],
         "no-underscore-dangle": ["error", { "allow": ["__INITIAL_STATE__"] }],
         "new-cap": ["error", {"capIsNewExceptions": ["Map", "List"]}],
-        "react/prefer-es6-class": 1
+        "react/prefer-es6-class": 1,
+        "no-restricted-syntax": 0
     },
     "globals": {
         "$": true
