--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --ext .js --ext .jsx .",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
-    "development": "webpack-dev-server --inline",
+    "development": "webpack-dev-server",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js",
     "server": "node server",
     "start": "npm run server",
@@ -34,6 +34,7 @@
     ]
   },
   "dependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-plugin-react-transform": "^2.0.2",
@@ -50,7 +51,9 @@
     "css-loader": "^0.23.1",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gm": "^1.21.1",
+    "html-webpack-plugin": "^2.17.0",
     "immutable": "^3.7.5",
     "jquery": "^2.2.0",
     "js-cookie": "^2.0.4",
@@ -61,10 +64,8 @@
     "postcss-focus": "^1.0.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
-    "postcss-mixins": "^4.0.2",
-    "postcss-nested": "^1.0.0",
     "postcss-reporter": "^1.3.3",
-    "postcss-simple-vars": "^2.0.0",
+    "precss": "^1.4.0",
     "pug": "^2.0.0-alpha6",
     "radium": "^0.17.1",
     "react": "^15.0.2",
@@ -99,6 +100,8 @@
     "eslint-plugin-import": "^1.7.0",
     "eslint-plugin-jsx-a11y": "^1.0.4",
     "eslint-plugin-react": "^5.0.1",
-    "react-addons-perf": "^15.0.2"
+    "react-addons-perf": "^15.0.2",
+    "stylelint": "^6.5.1",
+    "stylelint-config-standard": "^8.0.0"
   }
 }
