--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jquery": "^2.2.0",
     "js-cookie": "^2.0.4",
     "jsdom": "^8.5.0",
+    "lost": "^6.8.0",
     "mocha": "^2.3.4",
     "node-localstorage": "^1.3.0",
     "oauth": "^0.9.14",
