--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-alert": "^1.0.14",
     "react-color": "^2.0.0",
     "react-cookie-banner": "0.0.11",
+    "react-custom-scrollbars": "^4.0.0-beta.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^1.3.0",
     "react-modal": "^1.2.1",
