--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-dev-server": "^1.14.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "webpack-hot-middleware": "^2.2.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "engines": {
     "node": "5.11.0"
