--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.6.1",
     "body-parser": "^1.15.1",
-    "chai": "^3.4.1",
-    "chai-immutable": "^1.5.3",
     "cookie-parser": "^1.4.0",
     "copy-webpack-plugin": "^2.1.3",
     "cors": "^2.7.1",
@@ -56,11 +54,8 @@
     "gm": "^1.21.1",
     "html-webpack-plugin": "^2.17.0",
     "immutable": "^3.7.5",
-    "jquery": "^2.2.0",
     "js-cookie": "^2.0.4",
-    "jsdom": "^8.5.0",
     "lost": "^6.8.0",
-    "mocha": "^2.3.4",
     "node-localstorage": "^1.3.0",
     "oauth": "^0.9.14",
     "postcss-import": "^8.1.2",
@@ -105,6 +100,10 @@
     "eslint-plugin-react": "^5.0.1",
     "react-addons-perf": "^15.0.2",
     "stylelint": "^6.5.1",
-    "stylelint-config-standard": "^8.0.0"
+    "stylelint-config-standard": "^8.0.0",
+    "chai": "^3.4.1",
+    "chai-immutable": "^1.5.3",
+    "jsdom": "^8.5.0",
+    "mocha": "^2.3.4"
   }
 }
