--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixel-art-react",
-  "version": "1.1.0",
-  "description": "Pixel art drawing web app powered by ReactJS",
+  "version": "2.0.0",
+  "description": "Draw and animate Pixel Art, then export the results to CSS, share or download them, powered by React",
   "author": "Javier Valencia Romero",
   "scripts": {
     "lint": "eslint --ext .js --ext .jsx .",
