--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
         "no-underscore-dangle": ["error", { "allow": ["__INITIAL_STATE__"] }],
         "new-cap": ["error", {"capIsNewExceptions": ["Map", "List"]}],
         "react/prefer-es6-class": 1,
-        "no-restricted-syntax": 0
+        "no-restricted-syntax": 0,
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
     },
     "globals": {
         "$": true
