--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
         "new-cap": ["error", {"capIsNewExceptions": ["Map", "List"]}],
         "react/prefer-es6-class": 1,
         "no-restricted-syntax": 0,
-        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
     },
     "globals": {
         "$": true
