--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "csslint": "stylelint src/css/**/*.css",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
-    "development": "webpack-dev-server",
+    "development": "webpack-dev-server --hot",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js",
     "server": "node ./src/server/loader",
     "server-debug": "node --inspect ./src/server/loader",
@@ -36,9 +36,9 @@
     ]
   },
   "dependencies": {
-    "autoprefixer": "^7.1.6",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "autoprefixer": "^8.4.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -46,50 +46,49 @@
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "copy-webpack-plugin": "^4.2.0",
+    "copy-webpack-plugin": "^4.5.1",
     "cors": "^2.8.4",
-    "css-loader": "^0.28.7",
-    "express": "^4.16.2",
+    "css-loader": "^0.28.11",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "gm": "^1.23.0",
-    "html-webpack-plugin": "^2.30.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "gm": "^1.23.1",
+    "html-webpack-plugin": "^3.2.0",
     "immutable": "^3.8.2",
     "js-cookie": "^2.2.0",
-    "lost": "^8.2.0",
-    "node-localstorage": "^1.3.0",
+    "lost": "^8.2.1",
+    "node-localstorage": "^1.3.1",
     "oauth": "^0.9.15",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.4",
     "postcss-reporter": "^5.0.0",
     "precss": "^2.0.0",
-    "pug": "^2.0.0-rc.4",
-    "radium": "^0.19.6",
-    "react": "^16.1.0",
-    "react-transition-group": "^2.2.1",
+    "pug": "^2.0.3",
+    "radium": "^0.24.0",
+    "react": "^16.3.2",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-color": "^2.13.8",
-    "react-cookie-banner": "0.0.18",
+    "react-color": "^2.14.1",
+    "react-cookie-banner": "3.0.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.1.0",
-    "react-hot-loader": "^3.1.2",
-    "react-modal": "^3.1.2",
-    "react-redux": "^5.0.6",
+    "react-dom": "^16.3.2",
+    "react-modal": "^3.4.4",
+    "react-redux": "^5.0.7",
     "react-transform-hmr": "^1.0.4",
-    "redux": "^3.7.2",
-    "redux-undo": "^0.6.1",
+    "react-transition-group": "^2.3.1",
+    "redux": "^4.0.0",
+    "redux-undo": "^1.0.0-beta9",
     "shortid": "^2.2.8",
-    "style-loader": "^0.19.0",
+    "style-loader": "^0.21.0",
     "temp": "^0.8.3",
     "twitter": "^1.7.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.4",
-    "webpack-hot-middleware": "^2.20.0",
-    "whatwg-fetch": "^2.0.3"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.6.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.1",
+    "whatwg-fetch": "^2.0.4"
   },
   "engines": {
     "node": "8.11.1"
@@ -97,15 +96,16 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-immutable": "^2.0.0-alpha.1",
-    "eslint": "^4.11.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "jsdom": "^11.3.0",
-    "mocha": "^4.0.1",
-    "stylelint": "^8.2.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "jsdom": "^11.9.0",
+    "mocha": "^5.1.1",
+    "stylelint": "^9.2.0",
     "stylelint-config-lost": "0.0.3",
-    "stylelint-config-standard": "^17.0.0"
+    "stylelint-config-standard": "^18.2.0",
+    "webpack-cli": "^2.0.15"
   }
 }
