--- a/package.json
+++ b/package.json
@@ -31,28 +31,16 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^8.4.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-react-transform": "^3.0.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.2",
     "box-shadow-pixels": "0.0.3",
     "cookie-parser": "^1.4.3",
-    "copy-webpack-plugin": "^4.5.1",
-    "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "gm": "^1.23.1",
-    "html-webpack-plugin": "^3.2.0",
     "immutable": "^3.8.2",
-    "js-cookie": "^2.2.0",
     "lost": "^8.2.1",
-    "node-localstorage": "^1.3.1",
     "oauth": "^0.9.15",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.4",
@@ -78,27 +66,36 @@
     "temp": "^0.8.3",
     "twitter": "^1.7.1",
     "url-loader": "^1.0.1",
-    "webpack": "^4.6.0",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.1",
     "whatwg-fetch": "^2.0.4"
   },
   "engines": {
     "node": "8.11.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "copy-webpack-plugin": "^4.5.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "stylelint": "^9.2.0",
     "stylelint-config-lost": "0.0.3",
     "stylelint-config-standard": "^18.2.0",
-    "webpack-cli": "^2.0.15"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.1"
   }
 }
